--- a/Views/Produtos/Delete.cshtml
+++ b/Views/Produtos/Delete.cshtml
@@ -1,9 +1,8 @@
-@model mvc_aspnet.Models.Categoria
+@model mvc_aspnet.Models.Produto
 
 @{
     ViewData["Title"] = "Home Page";
 }
-
 
 <!DOCTYPE html>
 
@@ -16,7 +15,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Categorias</h4>
+    <h4>Produto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,6 +23,18 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantidade)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Quantidade)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdCategoria)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdCategoria)
         </dd>
     </dl>
     
