--- a/Views/Produtos/Edit.cshtml
+++ b/Views/Produtos/Edit.cshtml
@@ -1,9 +1,8 @@
-@model mvc_aspnet.Models.Categoria
+@model mvc_aspnet.Models.Produto
 
 @{
     ViewData["Title"] = "Home Page";
 }
-
 
 <!DOCTYPE html>
 
@@ -14,7 +13,7 @@
 </head>
 <body>
 
-<h4>Categorias</h4>
+<h4>Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,6 +24,16 @@
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Quantidade" class="control-label"></label>
+                <input asp-for="Quantidade" class="form-control" />
+                <span asp-validation-for="Quantidade" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdCategoria" class="control-label"></label>
+                <input asp-for="IdCategoria" class="form-control" />
+                <span asp-validation-for="IdCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
